--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,43 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+      <%= link_to 'Bookster', root_url, class: "navbar-brand" %>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarCollapse">
+        <ul class="navbar-nav mr-auto">
+
+          <% if user_signed_in? %>
+            <li class="nav-item active">
+              <% if current_user.profile.present? %>
+                <%= link_to 'My profile', profile_path(current_user.profile.id), method: :get, class: "nav-link" %>
+              <% else %>
+                <%= link_to 'Make profile', new_profile_path, method: :get, class: "nav-link" %>
+              <% end %>
+            </li>
+            <li class="nav-item active">
+              <%= link_to 'My reviews', books_path, method: :get, class: "nav-link" %>
+            </li>
+            <li class="nav-item active">
+              <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: "nav-link" %>
+            </li>
+        <% else  %>
+          <li class="nav-item active">
+            <%= link_to 'Log in', new_user_session_path, class: "nav-link" %>
+          </li>
+          <li class="nav-item active">
+            <%= link_to 'Sign up', new_user_registration_path, class: "nav-link" %>
+          </li>
+        <% end %>
+      </ul>
+    </div>
+  </nav>
+
+  <div class = "container">
     <%= yield %>
+  </div>
+
   </body>
 </html>
