--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,8 +1,8 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>User:</strong>
-  <%= @profile.user %>
+  <strong>Avatar data:</strong>
+  <%= @profile.avatar_data %>
 </p>
 
 <p>
@@ -11,8 +11,8 @@
 </p>
 
 <p>
-  <strong>Avatar data:</strong>
-  <%= @profile.avatar_data %>
+  <strong>Email:</strong>
+  <%= @profile.user.email %>
 </p>
 
 <p>
