--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -6,23 +6,21 @@
   <thead>
     <tr>
       <th>Title</th>
+      <th>Author</th>
       <th>Year</th>
       <th>Description</th>
       <th>Genre</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= book.title %></td>
+        <td><%= link_to book.title, book %></td>
+        <td><%= list_authors(book) %></td>
         <td><%= book.year %></td>
         <td><%= book.description %></td>
         <td><%= book.genre %></td>
-        <td><%= link_to 'Show', book %></td>
-        <td><%= link_to 'Edit', edit_book_path(book) %></td>
-        <td><%= link_to 'Destroy', book, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
