--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -2,25 +2,59 @@
 
 <div class="container">
   <h2><%= @book.title %>, <span><%= @book.year %></span></h2>
-  <p>by <% @book.authors.pluck(:first_name, :last_name).each do |author| %>
-    <%= "#{author.join(' ')}" %>
-  <% end %></p>
-
+  <p>by <%= list_authors(@book) %></p>
+  <p>Genre: <%= @book.genre %></p>
   <p><%= @book.description %></p>
 
-  <p><%= @book.genre %></p>
 
-  <span class="book__stars">
-    <% @book.reviews.average(:star_rating).floor.times do |index| %>
-      <%= fa_icon "star", class: "book__star-rating" %>
-    <% end %>
-    <%= fa_icon "star-half-o", class: "book__star-rating" %>
-    <% (4 - @book.reviews.average(:star_rating).floor).times do |index| %>
-      <%= fa_icon "star-o", class: "book__star-rating" %>
-    <% end %>
-  </span>
-  <h2><%= @book.reviews.average(:star_rating).round(1) %> out of 5 stars (<%= pluralize @book.reviews.count, "review" %>)</h2>
+  <h2>Reader Reviews</h2>
+  <% if @book.reviews.any? %>
+    <span class="book__stars">
+      <% @book.reviews.average(:star_rating).floor.times do |index| %>
+        <%= fa_icon "star 2x", class: "book__star-rating" %>
+      <% end %>
+      <% if @book.reviews.average(:star_rating) > @book.reviews.average(:star_rating).floor %>
+        <%= fa_icon "star-half-o 2x", class: "book__star-rating" %>
+        <% (4 - @book.reviews.average(:star_rating).floor).times do |index| %>
+          <%= fa_icon "star-o 2x", class: "book__star-rating" %>
+        <% end %>
+      <% else %>
+        <% (5 - @book.reviews.average(:star_rating).floor).times do |index| %>
+          <%= fa_icon "star-o 2x", class: "book__star-rating" %>
+        <% end %>
+      <% end %>
+      (<%= pluralize @book.reviews.count, "review" %>)
+    </span>
+    <p><%= @book.reviews.average(:star_rating).round(1) %> out of 5 stars</p>
+  <% else %>
+    <p>This book has no reviews yet. Be the first to write a review</p>
+  <% end %>
   
+  <h4>Write a review</h4>
+
+  <%= form_with model: [@book, @review], local: true, class: "book__review-form" do |form|%>
+      <%= form.label :star_rating, '1 star' %>
+      <%= form.radio_button :star_rating, 1 %>      
+      <%= form.label :star_rating, '2 stars' %>
+      <%= form.radio_button :star_rating, 2 %>      
+      <%= form.label :star_rating, '3 stars' %>
+      <%= form.radio_button :star_rating, 3 %>
+      <%= form.label :star_rating, '4 stars' %>
+      <%= form.radio_button :star_rating, 4 %>
+      <%= form.label :star_rating, '5 stars' %>
+      <%= form.radio_button :star_rating, 5, checked: true %>
+      <%= form.hidden_field :book_id, value: @book.id %>
+      <div class="form-group">
+        <%= form.label "Title for your review" %>      
+        <%= form.text_field :title, id: :content, class: "form-control" %>      
+      </div>
+      <div class="form-group">
+        <%= form.label "Review content" %>      
+        <%= form.text_area :content, id: :content, class: "form-control book__review-content-textarea" %>      
+      </div>
+      <%= form.button "Submit", class: "btn btn-primary" %>    
+  <% end %>
+
   <% @book.reviews.each do |review| %>
     <div>
       <span class="book__stars">
