default pics added for books and profiles

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -17,11 +17,18 @@
   <tbody>
     <% @books.each do |book| %>
       <tr>
-        <td><%= image_tag(book.image_url(:thumb)) if book.image_url(:thumb).present? %></td>
+        <td>
+          <% if book.image_url(:thumb).present? %>
+            <%= image_tag(book.image_url(:thumb))  %>
+          <% else %>
+            <%= image_tag('default_thumb.png') %>
+          <% end %>
+        </td>
         <td><%= link_to book.title, book %></td>
         <td><%= list_authors(book) %></td>
         <td><%= book.year %></td>
-        <td><%= book.description %></td>
+        <td><%= truncate book.description, length: 300 %>
+            <%= link_to 'read more', book %></td>
         <td><%= book.genre %></td>
       </tr>
     <% end %>
