--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -5,7 +5,6 @@
 <table>
   <thead>
     <tr>
-      <th>User</th>
       <th>Book</th>
       <th>Content</th>
       <th>Star rating</th>
@@ -16,18 +15,12 @@
   <tbody>
     <% @reviews.each do |review| %>
       <tr>
-        <td><%= review.user %></td>
-        <td><%= review.book %></td>
+        <td><%= review.book.title %></td>
         <td><%= review.content %></td>
         <td><%= review.star_rating %></td>
-        <td><%= link_to 'Show', review %></td>
         <td><%= link_to 'Edit', edit_review_path(review) %></td>
         <td><%= link_to 'Destroy', review, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Review', new_review_path %>
