--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
               <% end %>
             </li>
             <li class="nav-item active">
-              <%= link_to 'My reviews', books_path, method: :get, class: "nav-link" %>
+              <%= link_to 'My reviews', reviews_path, method: :get, class: "nav-link" %>
             </li>
             <li class="nav-item active">
               <%= link_to 'Log out', destroy_user_session_path, method: :delete, class: "nav-link" %>
