Book show column layout

--- a/app/assets/stylesheets/_books.scss
+++ b/app/assets/stylesheets/_books.scss
@@ -16,4 +16,10 @@
   &__review-content-textarea {
     margin-bottom: 20px;
   }
+  &__info-container {
+    margin-bottom: 30px;
+  }
+  &__cover-image {
+    margin-right: 20px;
+  }
 }
