--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,17 +1,20 @@
 <p id="notice"><%= notice %></p>
 
-<% if @book.image_url(:original).present? %>
-  <%= image_tag(@book.image_url(:original))  %>
-<% else %>
-  <%= image_tag('default_image.png') %>
-<% end %>
 
 <div class="container">
-  <h2><%= @book.title %>, <span><%= @book.year %></span></h2>
-  <p>by <%= list_authors(@book) %></p>
-  <p>Genre: <%= @book.genre %></p>
-  <p><%= @book.description %></p>
-
+  <div class="book__info-container d-flex">
+    <% if @book.image_url(:original).present? %>
+      <%= image_tag(@book.image_url(:original), class: "book__cover-image")  %>
+    <% else %>
+      <%= image_tag('default_image.png', class: "book__cover-image") %>
+    <% end %>  
+    <div class="book-details">
+      <h2><%= @book.title %>, <span><%= @book.year %></span></h2>
+      <p>by <%= list_authors(@book) %></p>
+      <p>Genre: <%= @book.genre %></p>
+      <p><%= @book.description %></p>  
+    </div>
+  </div>
 
   <h2>Reader Reviews</h2>
   <% if @book.reviews.any? %>
@@ -63,11 +66,7 @@
         <%= form.button "Submit", class: "btn btn-primary" %>    
     <% end %>
   <% else %>
-<<<<<<< HEAD
     <p><%= link_to "Login", new_user_session_path %> to write a review</p>
-=======
-    <%= link_to 'Sign in to write a review', new_user_session_path %>
->>>>>>> 4c33bc9061e8bd9cb3888a5f53399c69e5a6a26a
   <% end %>
 
   <% @book.reviews.each do |review| %>
