ordered books index and limited show image size in css

--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -15,7 +15,7 @@
   </thead>
 
   <tbody>
-    <% @books.each do |book| %>
+    <% @books.order(:title).each do |book| %>
       <tr>
         <td>
           <% if book.image_url(:thumb).present? %>
