--- a/app/assets/stylesheets/_books.scss
+++ b/app/assets/stylesheets/_books.scss
@@ -21,5 +21,10 @@
   }
   &__cover-image {
     margin-right: 20px;
+    display: block;
+    max-width:300px;
+    max-height:700px;
+    width: auto;
+    height: auto;
   }
 }
